[tool.poetry]
name = "Project_101"
version = "0.1.0"
description = "First demo project"
authors = ["Biky"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
